Fix overflow in default and simulator shell

--- a/src/ui/src/styles.css
+++ b/src/ui/src/styles.css
@@ -6,10 +6,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  cursor: none;
 }
 
-.container, html, body {
+html, body {
   margin: 0;
   padding: 0;
   overflow: hidden;
